<resources>
    <string name="app_name">اونوف</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- header item -->
    <string name="email">Gam3a.servants@gmail.com</string>

    <!-- navigation menu items -->
    <string name="rating">Rate us</string>
    <string name="facebook">Join us</string>
    <string name="communicate">Communicate</string>
    <string name="about_us">About us</string>
    <string name="call">Emergency call</string>
    <string name="lgnet">لجنة شباب جامعة</string>

    <!-- navigation java items -->
    <string name="form_link">https://docs.google.com/forms/d/e/1FAIpQLSfgPgOktVXRqdvGreHDRgLGq8y-c9_vM9AhT-8nj6OfKI9KGA/viewform</string>
    <string name="facebook_group">https://www.facebook.com/groups/356512411096711/</string>
    <string name="lgna_link">https://docs.google.com/document/d/1xop1vevkMbhGLNoRT1ry83gWzw2_6P3x9FujG55HG6s/edit#heading=h.vkqp64unqygf</string>
    <string name="tel">01227668104</string>

    <!-- privacy -->
    <string name="privacy">Privacy Policy</string>
    <string name="privacy_body">
        <b><u>What information do we collect?</u></b>
        \nWe do not collect or ask for specific permission our application just tells our user some urgent messages.

        \n\n<b><u>What do we use your info for?</u></b>
        \nWe never collect, send or use your data.

        \n\n<b><u>Changes to our Privacy Policy.</u></b>
        \nIf we decide to change our Privacy Policy, we will post these changes on this page.
        \nThis page last modified on 25/8/2019.

        \n\n<b><u>Contacting us</u></b>
        \nIf there are any questions regarding this Privacy Policy you may contact us using the information below.
        \nMenaSamerCap@gmail.com
        \n+201228613312
    </string>
    <string name="link"><u>Link</u></string>
    <string name="privacy_link">
        https://docs.google.com/document/d/17pRZ-sCkssYMBL8NhAwwMEvZSUY9IXOJXUMchHb4nTU/edit?usp=sharing
    </string>

    <string name="aya1">فلا تكونُ إلّا فرِحًا</string>
    <string name="aya2">تثنية 16 : 15</string>

    <!-- main screen-->
    <string name="program">البرنامج</string>
    <string name="logo">الشعار</string>
    <string name="songs">الترانيم</string>
    <string name="conference">المؤتمر</string>
    <string name="ounof_song">تمجيد</string>

    <!-- program days -->
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string name="four">FOUR</string>
    <string name="date1">27/8</string>
    <string name="date2">28/8</string>
    <string name="date3">29/8</string>
    <string name="date4">30/8</string>

    <!-- program arrays -->
    <string-array name="day1">
        <item>غذاء</item>
        <item>صلاة غروب</item>
        <item>إفتتاحية المؤتمر</item>
        <item>محاضرة</item>
        <item>مجموعات عمل</item>
        <item>عشاء</item>
        <item>أمسية</item>
        <item>صلاة نوم</item>
    </string-array>
    <string-array name="day2">
        <item>قداس</item>
        <item>إفطار</item>
        <item>دراسة كتاب</item>
        <item>مشروعات</item>
        <item>غذاء وألعاب</item>
        <item>صلاة غروب ونوم</item>
        <item>خلوة</item>
        <item>نتيجة المسابقة</item>
        <item>مجموعات عمل</item>
        <item>عشاء</item>
        <item>أمسية</item>
    </string-array>
    <string-array name="day3">
        <item>قداس</item>
        <item>إفطار</item>
        <item>دراسة كتاب</item>
        <item>مشروعات</item>
        <item>غذاء وألعاب</item>
        <item>صلاة غروب ونوم</item>
        <item>خلوة</item>
        <item>نتيجة المسابقة</item>
        <item>محاضرة</item>
        <item>مجموعات عمل</item>
        <item>عشاء</item>
        <item>أمسية</item>
    </string-array>
    <string-array name="day4">
        <item>قداس</item>
        <item>إفطار</item>
        <item>دراسة كتاب</item>
        <item>مشروعات</item>
        <item>غداء وراحة</item>
        <item>صلاة غروب ونوم</item>
        <item>نتيجة المسابقة</item>
        <item>محاضرة</item>
        <item>محطات</item>
        <item>عشاء</item>
        <item>حفلة السمر</item>
    </string-array>


    <!-- conference screen -->
    <string name="alone">الخلوة</string>
    <string name="holy_book">دراسة الكتاب</string>
    <string name="work_groups">مجموعات العمل</string>
    <string name="stations">المحطات</string>
    <string name="projects">المشروعات</string>

    <string name="alone_details">فترة الخلوة هي من أجمل الأوقات للإنسان ، \n
هي فترة هدوء النفس والروح و الأفكار ، \n
هي فترة البعد عن ضوضاء الحياة و سرعة الأحداث و الأخبار ، \n
هي دخول في حوار سري و مُناجاه قلبيه لا يسمعها سوي الله ، \n
ليست الخلوة هي وقت محاسبة النفس فقط أو تذكر خطاياك و ضعفاتك و تأنيب ضمير علي كل ما تفعل ، \n
الخلوة هي أن تحمل ذاتك و نفسك المنهكة و مشاعرك و قلبك و تجلس تحت قدمي يسوع ، \n
أخبره أنك تحبه ، و تفرح بالجلوس معه ، إشبع منه و تقوي به . \n
إستجمع كل أفكارك و مشاعرك و شرود ذهنك و حولهم إلي صلاه بسيطه ، هادئه ، عميقه ، \n
ذاتك هي أثمن ما تملك فلا تخدعها بمسكنات العالم بل إحملها في صلاتك إلي الله ، و هو سيسمع و يستجيب ، يبارك أفكارك و يعطيك إستنارة في الذهن و القلب ، يمنحك فرحا و سلاما وتتقدس من الوجود في محضره .
</string>
    <string name="holy_book_details">الحصار تلك الكلمه التي استخدمها الكتاب المقدس لشرح فكره انقطاع التواصل بين الانسان و بين العالم الخارجي .... \n

الحصار كلمه لا يستريح القلب لها و لا يقدر الانسان علي احتمال تبعاتها \n

ها هو حصار السامره الذي جعل الشعب اليهودي في مجاعه طاحنه اودت بحياه كثيرين و جعلت التضخم يصل لاعلي مستويايه \n

و هاهو حصار من نوع اخر ..حصار النفس للنفس \n
حينما يحصر الشيخين انفسهما في حب سوسنه العفيفه \n
ذالك الحصار الذي وجد داخله ظلم و كبرياء و كذب و محاوله لقتل سوسنه لرفضها حصار الخطيه \n

و ها هو حصار اخر ايجابي من يد الله حينما ترى بطرس الرسول في السجن \n

فحصار الكنيسه زادها قوة و زادها المؤمنين صلابه و اجتمعوا من اجل بطرس امام المسيح \n

صديقي \n
كل حصار يجعلك وحيدا  هو حرب \n
و كل حصار يجعلك تبادر لتحمل المسئوليه و ترك مناطق الراحه هو من الله \n

اصلي من قلبي \n
ان نكون سويا في حصار الروح القدس لان محبه المسيح تحصرنا..

</string>
    <string name="work_groups_details">متي تشعر بالفرح والارتياح وتبتعد عن القلق والاكتئاب ؟؟\n
من اكثر المشاكل التي نعاني منها هذه الايام بإختلاف ظروفنا هو القلق والاكتئاب والحيرة \n
“مُكتَئبينَ في كُلِّ شَيءٍ، لكن غَيرَ مُتَضايِقينَ. مُتَحَيِّرينَ، لكن غَيرَ يائسينَ.”\n
كورِنثوس الثّانيةُ‬ 8:4\n
فنحن دائماً ما نبحث عن السعاده في الاشياء والظروف الخارجية وكأن السعادة والفرح اشياء مكتسبة ولكنها في الحقيقة بداخلنا ما علينا هو محاربة المعوقات والحواجز التي تقع بيننا وبين الكشف عن السعاده ... فالسعادة تنبع من داخلنا \n
من الاشياء التي تحافط علي فرحنا وسعادتنا ، ان نعرف توجهنا في الحياة وما نسعي اليه .. ان تعرف كيف تضع اهدافك وتسعي لتحقيقها ذلك \n
وايضاً ان تكون لنا علاقات صحية مع الآخرين وما هي الدفاعات النفسية التي نستخدمها كحواجز تمنعنا من التمتع بعلاقات بناءه مع الآخرين \n

هذه هي المحاور الثلاث التي سنتشارك بها في مجموعات العمل في مؤتمرك اونوف
</string>
    <string name="stations_details">كَشَجَرَةٍ مَغْرُوسَةٍ عِنْدَ مَجَارِي الْمِيَاهِ، الَّتِي تُعْطِي ثَمَرَهَا فِي أَوَانِهِ، وَوَرَقُهَا لاَ يَذْبُلُ. وَكُلُّ مَا يَصْنَعُهُ يَنْجَحُ. مز ١ : ٣  \n

 حياتنا كهذة الشجرة التي غرسنا الله نفسة علي مجري المياه لتنبت وتنمو وتثمر ويستظل بظلها اخرون.\n
فكيف لنا ان نثمر؟! ببساطة احبائي ان الثمر هو ثمر الروح القدس \n
وَأَمَّا ثَمَرُ الرُّوحِ فَهُوَ: مَحَبَّةٌ فَرَحٌ سَلاَمٌ، طُولُ أَنَاةٍ لُطْفٌ صَلاَحٌ، إِيمَانٌ وَدَاعَةٌ تَعَفُّفٌ. غلا ٥ : ٢٢ - و٢٣ \n
والروح القدس ساكن فينا لذا لكي نثمر عليا بأن نأكل من الروح القدس نفسة لان ثمارة تعطي لنا الحياة ثمارة محيية حقيقية ابدية ليست وقتية\n

اذن علينا ان نتعلم الثمار من الله نفسة وعندما نذوقها نثمر بها\n

فا بالمحبة تفرح وبالفرح تعيش في سلام وبسلامك تطول اناتك فتكون لطيفا ومن كنزك الصالح تخرج صلاحاً فيظهر عمق إيمانك تتعلم الوداعة من الله تعلمو مني لاني وديع ومتواضع القلب بتتنقي وتتعفف وتثمو وتعلو فوق الأشياء متطلعاً الي السماء والحياة الابدي.\n
</string>
    <string name="projects_details">
        هي دعوة للعمل كفريق مع باقي افراد المجموعة لعمل مشروع يليق بشباب (اونوف)\n
وعرضه في حفلة السمر (الحفلة الختامية للمؤتمر) \n
شروط العرض\n
+ان لايتعدي العرض 3 دقائق \n
+مشاركة كل اعضاء الفريق سواء في الإعداد او العرض\n
+الفريق الفائز يتوج بميداليات اسقفية الشباب \n\n

1- اونوف talent \n
هو برنامج يتيح لك تقديم موهبتك \n
عزف موسيقي 🎻🎺🎷\n
تمثيل 🎭\n
ترنيم 🎸🎤\n
تأليف اشعار 🎶\n
تلحين 🎹\n
رسم 🎨\n
الخ ...\n
الثلاث مواهب الفائزة لها هدية المؤتمر \n
 اسأل علي استمارة الاشتراك \n\n

2- جورنال  (اونوف)\n
لو نفسك تكون رئيس تحرير او صحفي \n
جاتلك فرصتك \n
مشروعنا ده هاتعمل فيه جورنال يومي بمقالات مختلفة ويمكن لاي شاب عمل مقالة وطبعها باسمه \n\n
3-فنون مسرحية 🎦🎬🎥📷🎪🎭\n
لو دمك خفيف وتعرف تشتغل  مع فريق تمثيل \n
دي فرصتك لعمل اسكتشات هادفة  وعرضها في الحفلة الختامية \n
في مدة لاتزيد عن 3 دقائق \n\n
4- Reportage اونوف\n
مطلوب عمل 5  ريبورتاج مع كل شباب المؤتمر \n
في خمس موضوعات وقضايا مختلفة تهم الشباب \n\n
5- لو نفسك تتعلم فن التسويق \n
تسويق لفكرة \n
تسويق لمنتج ، تسويق اليكتروني\n
هاتتعمل معانا فن التسويق \n\n
6-  لو بتحب الاعمال اليدوية \n
افرح \n
لانك هاتتعلم معانا حاجات كتيرة جدا \n
عندنا ورش كتير زي : \n
-فن رسم بقشرة الخشب \n
-عجينة سيراميك\n
-الرسم علي الزجاج\n
-فنون استخدام بالونات \n
-هدايا واوريجامي\n\n
7-لو نفسك تتعلم نوتة موسيقية \n
وازاي تكون عضو فعال في كورال\n

    </string>


</resources>
