<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/rating"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/rating" />

        <item
            android:id="@+id/facebook"
            android:icon="@drawable/ic_facebook_black_24"
            android:title="@string/facebook" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/call"
                    android:icon="@drawable/ic_call_black_24dp"
                    android:title="@string/call" />
            </group>
        </menu>
    </item>

    <item android:title="@string/about_us">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/aboutUs"
                    android:icon="@drawable/ic_info_outline_black_24dp"
                    android:title="@string/lgnet" />
            </group>
        </menu>
    </item>

</menu>
