<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ConferenceActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/alone_image_view"
                style="@style/ImageViewStyle"
                android:layout_width="@dimen/icon_height"
                android:layout_height="@dimen/icon_height"
                android:src="@mipmap/khelwa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/start_text_view"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alone"
                app:layout_constraintEnd_toEndOf="@id/alone_image_view"
                app:layout_constraintStart_toStartOf="@id/alone_image_view"
                app:layout_constraintTop_toBottomOf="@id/alone_image_view" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/holy_book_image_view"
                style="@style/ImageViewStyle"
                android:layout_width="@dimen/icon_height"
                android:layout_height="@dimen/icon_height"
                android:layout_marginTop="15dp"
                android:src="@mipmap/holybook"
                app:layout_constraintEnd_toStartOf="@id/work_groups_image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alone_image_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/holy_book_text_view"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/holy_book"
                app:layout_constraintEnd_toEndOf="@id/holy_book_image_view"
                app:layout_constraintStart_toStartOf="@id/holy_book_image_view"
                app:layout_constraintTop_toBottomOf="@id/holy_book_image_view" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/work_groups_image_view"
                style="@style/ImageViewStyle"
                android:layout_width="@dimen/icon_height"
                android:layout_height="@dimen/icon_height"
                android:src="@mipmap/working"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/holy_book_image_view"
                app:layout_constraintTop_toTopOf="@id/holy_book_image_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/work_groups_text_view"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_groups"
                app:layout_constraintEnd_toEndOf="@id/work_groups_image_view"
                app:layout_constraintStart_toStartOf="@id/work_groups_image_view"
                app:layout_constraintTop_toBottomOf="@id/work_groups_image_view" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/stations_image_view"
                style="@style/ImageViewStyle"
                android:layout_width="@dimen/icon_height"
                android:layout_height="@dimen/icon_height"
                android:layout_marginTop="15dp"
                android:src="@mipmap/stations"
                app:layout_constraintEnd_toStartOf="@id/projects_image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/holy_book_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stations_text_view"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stations"
                app:layout_constraintEnd_toEndOf="@id/stations_image_view"
                app:layout_constraintStart_toStartOf="@id/stations_image_view"
                app:layout_constraintTop_toBottomOf="@id/stations_image_view" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/projects_image_view"
                style="@style/ImageViewStyle"
                android:layout_width="@dimen/icon_height"
                android:layout_height="@dimen/icon_height"
                android:src="@mipmap/projects"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/stations_image_view"
                app:layout_constraintTop_toTopOf="@id/stations_image_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tr_text_view"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projects"
                app:layout_constraintEnd_toEndOf="@id/projects_image_view"
                app:layout_constraintStart_toStartOf="@id/projects_image_view"
                app:layout_constraintTop_toBottomOf="@id/projects_image_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>